plugins {
    id("java")
    id 'com.diffplug.spotless' version '8.10.2' apply false
}

repositories {
    mavenCentral()
}

def requiredJavaVersion = 25
def currentJavaVersion = JavaVersion.current().majorVersion.toInteger()

if (currentJavaVersion != requiredJavaVersion) {
    throw new GradleException(
            "This project requires Java ${requiredJavaVersion}. " +
                    "Current Java version is ${currentJavaVersion}. " +
                    "Please update your JAVA_HOME or use the correct JDK."
    )
}

configurations {
    jacocoAnt
}

dependencies {
    jacocoAnt "org.jacoco:org.jacoco.ant:0.8.15"
    runtimeOnly "javax.xml.bind:jaxb-api:2.3.1"
    compileOnly 'org.projectlombok:lombok:1.18.48'
    annotationProcessor 'org.projectlombok:lombok:1.18.48'
    testCompileOnly 'org.projectlombok:lombok:1.18.48'
    testAnnotationProcessor 'org.projectlombok:lombok:1.18.48'
}

subprojects {
    group = 'uk.gov.justice.laa.data.access'

    pluginManager.withPlugin('java') {
        java {
            toolchain {
                languageVersion = JavaLanguageVersion.of(25)
            }
        }

        apply plugin: 'com.diffplug.spotless'

        spotless {
            java {
                target 'src/*/java/**/*.java'
                importOrder()
                removeUnusedImports()
                cleanthat()
                googleJavaFormat('1.34.1')
            }
        }
    }

    afterEvaluate {
        if (plugins.hasPlugin('checkstyle')) {
            checkstyle {
                toolVersion = '13.8.0'
            }
        }
    }
}

allprojects {
    repositories {
        maven {
            name = "sonatypeSnapshots"
            url = uri('https://central.sonatype.com/repository/maven-snapshots/')
            mavenContent {
                snapshotsOnly()
            }
            content {
                includeGroup('uk.gov.justice.service.laa')
            }
        }
        mavenCentral()
    }
}

tasks.withType(Test).configureEach {
    useJUnitPlatform()
}
